--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">FirebaseStorage</string>
+    <string name="name">Name:</string>
+    <string name="email">Email:</string>
+    <string name="todo">TODO</string>
+    <string name="submit">Submit</string>
 </resources>
